--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/Tuskan360/passport-photo-middleware.git"
   },
-  "dependencies": {
-  }
+  "dependencies": {},
+  "author": "ForbesLindesay",
+  "license": "MIT"
 }
